Added authorization system with cookies

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ Learning/base_api/__pycache__/
 Learning/task_manager/__pycache__/
 Learning/task_manager/task_manager.db
 Learning/task_manager/database/__pycache__/
+Learning/task_manager/users/__pycache__/
+Learning/current_datetime/__pycache__/current_datetime.cpython-310.pyc
+
