--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Learning/task_manager/database/__pycache__/
 Learning/task_manager/users/__pycache__/
 Learning/current_datetime/__pycache__/current_datetime.cpython-310.pyc
 Learning/task_manager/routers/__pycache__/
+Learning/task_manager/log/
