Made repo refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 .idea/
-Learning/base_api/__pycache__/
-Learning/task_manager/__pycache__/
-Learning/task_manager/task_manager.db
-Learning/task_manager/database/__pycache__/
-Learning/task_manager/users/__pycache__/
-Learning/current_datetime/__pycache__/current_datetime.cpython-310.pyc
-Learning/task_manager/routers/__pycache__/
-Learning/task_manager/log/
-Learning/task_manager/test_database.db
-Learning/task_manager/tests/__pycache__/
-
+Task_Manager/base_api/__pycache__/
+Task_Manager/src/__pycache__/
+Task_Manager/src/task_manager.db
+Task_Manager/src/database/__pycache__/
+Task_Manager/src/users/__pycache__/
+Task_Manager/current_datetime/__pycache__/current_datetime.cpython-310.pyc
+Task_Manager/src/routers/__pycache__/
+Task_Manager/src/log/
+Task_Manager/src/test_database.db
+Task_Manager/src/tests/__pycache__/
+Task_Manager/current_datetime/
+Task_Manager/base_api/
